<resources>
    <string name="app_name">GamePlayer</string>

    <!--main Activity-->
    <string name="forServey">"सर्वेक्षक के भरने के लिए :"</string>
    <string name="blockName">"ब्लॉक का नाम"</string>
    <string name="villageName">"गाँव का नाम"</string>
    <string name="groupCount">"ग्रुप "</string>
    <string name="studentName">"बच्चों के नाम"</string>


    <!-- <string name="instructionForServey">"सर्वेक्षक के लिए निर्देश :"</string>
     <string name="instruction1">"बच्चों को नीचे दी गई जानकारी पढ़ कर सुनाएँ "</string>
     <string name="instruction2">"आप सभी को टेबलेट पर एक खेल खिलाया जाएगा| खेल क्या है और कैसे खेला जाएगा इस बारे में जानकारी पढने के लिए आप में से किसी एक को निर्देश पढ़ने हैं| आपस में चर्चा करके बताएं कि आपके समूह से कौन प्रतिनिधि आएगा|"</string>
     <string name="instruction3">"जब बच्चे आपस में चर्चा कर रहे हों तब अवलोकन टूल भरें|"</string>-->
    <string name="instruction4">"बच्चों द्वारा चयनित प्रतिनिधि का नाम : "</string>


    <string name="rules">"इस खेल के दो स्तर हैं| पहले स्तर में 5 खेल हैं हमें आपस में चर्चा करके चुनना होगा कि कौन, कौनसा खेल खेलेगा| ये 5 खेल, खेल लेने के बाद हमें 2 खेल समूह में मिलकर खेलने होंगे|"</string>
    <string name="rulesOfGame">"खेल खेलने के नियम –"</string>
    <string name="rule1">"प्रत्येक खेल पार कर लेने पर हमें एक star मिलेगा"</string>
    <string name="rule2">"जब हम में से कोई एक खेल खेल रहा हो तब हमें उसकी मदद नहीं करनी है| \n खेल खेलते समय हम केवल एक ही बार अपने किसी एक साथी से मदद ले सकते हैं| \n मदद लेने के लिए बज़र दबा दें"</string>
    <string name="rule3">"खेल खेलने के बाद आपसे पूछा जाएगा यदि आप कुछ मज़ेदार जानकारी पढना चाहते हैं या नहीं| आप चाहें तो उन्हें पढ़ सकते हैं या फिर \nपहले 5 खेल में आपको क्या करना होगा इसकी जानकारी के आधार पर आपको तय करना होगा कि कौनसा बच्चा कौन सा खेल खेलेगा|\n
            खेल 1 : इस खेल में आपको एक बिंदु से दुसरे बिंदु तक जाने के लिए भूल भुलैय्या में से रास्ता ढूँढना होगा|\n
            खेल 2 : इस खेल में आपको सूचि में दी गई वस्तुएं दिए गए चित्र में खोजनी होंगी| \n
            खेल 3 : इस खेल में आपको एक आकार का उपयोग करते हुए कोई चित्र बनाना होगा \n
             खेल 4: इस खेल में आपको अपनी याददाश्त का इस्तमाल कर चित्रों कि सही जोड़ी बनानी होगी \n
            खेल 5: इस खेल में आपको संकेत भाषा में लिखा हुआ एक सवाल हल करना होगा|"</string>

    <string name="dilogMsg">"क्या आप सभी निर्देशों को एक बार फिरसे सुनना चाहेंगे?"</string>
    <string name="playgamedilogMsg1">"अब खेल खेलने के लिए टेबलेट "</string>
    <string name="playgamedilogMsg2">" के हाथ में दे दें|"</string>
    <string name="decideGame">"अब समूह में सभी लोग चर्चा करें कि कौन सा खेल आपमें से कौन खेलेगा | इसके लिए आपको 1 मिनट का समय मिलता है| ok बटन को दबाएँ| और टेबलेट सर्वेक्षक को दें|"</string>


    <string name="chooseStudent">"समूह से पूछे कौन क्या खेल खेलेगा और खेल के नाम के आगे बच्चे का नाम चुनें"</string>

    <string name="game1">"भूल भुलैय्या"</string>
    <string name="game2">"वस्तु खोजो"</string>
    <string name="game3">"चित्र बनाओ"</string>
    <string name="game4">"जोड़ी बनाओ"</string>
    <string name="game5">"संकेत भाषा"</string>


    <string name="groupGame1">TANGRAM GAME</string>
    <string name="groupGame2">PICTURE PUZZLE</string>


    <string-array name="india_states">
        <item>SELECT STATE</item>
        <item>Andhra Pradesh(AP)</item>
        <item>Arunachal Pradesh(AR)</item>
        <item>Assam(AS)</item>
        <item>Bihar(BR)</item>
        <item>Chhattisgarh(CG)</item>
        <item>Goa(GA)</item>
        <item>Gujarat(GJ)</item>
        <item>Haryana(HR)</item>
        <item>Himachal Pradesh(HP)</item>
        <item>Jammu and kashmir(JK)</item>
        <item>Jharkhand(JH)</item>
        <item>Karnataka(KA)</item>
        <item>Kerala(KL)</item>
        <item>Madhya Pradesh(MP)</item>
        <item>Maharashtra(MH)</item>
        <item>Manipur(MN)</item>
        <item>Meghalaya(ML)</item>
        <item>Mizoram(MZ)</item>
        <item>Nagaland(NL)</item>
        <item>Orissa(OR)</item>
        <item>Punjab(PB)</item>
        <item>Rajasthan(RJ)</item>
        <item>Sikkim(SK)</item>
        <item>Tamil Nadu(TN)</item>
        <item>Telangana(TS)</item>
        <item>Tripura(TR)</item>
        <item>Uttarakhand(UK)</item>
        <item>Uttar Pradesh(UP)</item>
        <item>West Bengal(WB)</item>
        <item>Andaman and Nicobar Islands(AN)</item>
        <item>Chandigarh(CH)</item>
        <item>Dadra and Nagar Haveli(DH)</item>
        <item>Daman and Diu(DD)</item>
        <item>Delhi(DL)</item>
        <item>Lakshadweep(LD)</item>
        <item>Pondicherry(PY)</item>
    </string-array>

    <string-array name="india_states_shortcode">
        <item>SELECT STATE</item>
        <item>AP</item>
        <item>AR</item>
        <item>AS</item>
        <item>BR</item>
        <item>CG</item>
        <item>GA</item>
        <item>GJ</item>
        <item>HR</item>
        <item>HP</item>
        <item>JK</item>
        <item>JH</item>
        <item>KA</item>
        <item>KL</item>
        <item>MP</item>
        <item>MH</item>
        <item>MN</item>
        <item>ML</item>
        <item>MZ</item>
        <item>NL</item>
        <item>OR</item>
        <item>PB</item>
        <item>RJ</item>
        <item>SK</item>
        <item>TN</item>
        <item>TS</item>
        <item>TR</item>
        <item>UK</item>
        <item>UP</item>
        <item>WB</item>
        <item>AN</item>
        <item>CH</item>
        <item>DH</item>
        <item>DD</item>
        <item>DL</item>
        <item>LD</item>
        <item>PY</item>
    </string-array>

    <string name="servey1">सर्वेक्षक समूह को पढ़कर सुनाए </string>
    <string name="servey2"><![CDATA[
गतिविधि के दौरान जब भी आपको चर्चा करने को कहा जाए तब दो बातों का ध्यान रखें  –<p> 1)चर्चा तभी शुरू करें जब शुरू करने को कहा जाए|</p><p> 2)चर्चा करते समय ध्यान रहे की आप आपस में जो भी बात करें वो हमें सुनाई दे|</p>सबसे पहले आप सभी को चर्चा कर के अपने समूह में से एक को चुनना होगा जो ज़ोर से पढ़कर सभी को गतिविधि के नियम सुनाएगा |<br>चर्चा शुरू करें |<br><br>
]]> </string>
    <string name="servey4"><![CDATA[
हमें टेबलेट पर कुछ खेल खेलने हैं|<br><br>
इसके लिए हमें दिए गए 5 खेलों को चर्चा करके आपस में बाँट लेना है|<br><br>
हम में से हर एक को केवल एक ही खेल खेलना है|<br><br>
यदि हमें खेलते समय अपने किसी साथी की मदद चाहिए तो हम मदद ले सकते हैं| मदद केवल बोलकर ही की जा सकती है |<br><br>

]]> </string>

    <string name="servey5"><![CDATA[
अगले दो खेल आप सभी को मिलकर खेलने
हैं|</br>
यदि आपको खेलते समय हमारी मदद लगे तो
आप मदद का बटन दबा सकते हैं और हम
आपकी मदद करेंगे|</br>
ध्यान रहे की मदद लेने का निर्णय पूरे समूह
का होगा जो आप सबको आपस में चर्चा करके
लेना होगा|</br>
]]> </string>
    <string name="servey3">NEXT दबाने के बाद बच्चे के सामने टेबलेट रख दें और उसे पढ़ने को कहें| </string>
    <string name="servey5dilogMsg">"अब आप सभी को आपस में चर्चा करके एक एक खेल पाँचों में बाँटने हैं| इसके लिए सबसे पहले पाँचों खेलो के बारे में पढ़ लें |"</string>
    <string name="servey5dilogheading">"सर्वेक्षक समूह को पढ़कर सुनाए :"</string>
    <string name="gameRule1">इस खेल में आपको एक बिंदु से दुसरे बिंदु तक जाने के लिए भूल भुलैय्या में से रास्ता ढूँढना होगा|</string>
    <string name="gameRule2">इस खेल में आपको सूचि में दी गई वस्तुएं दिए गए चित्र में खोजनी होंगी|</string>
    <string name="gameRule3">इस खेल में आपको एक आकार का उपयोग करते हुए कोई चित्र बनाना होगा|</string>
    <string name="gameRule4"> इस खेल में आपको अपनी याददाश्त का इस्तमाल कर चित्रों कि सही जोड़ी बनानी होगी|</string>
    <string name="gameRule5"> इस खेल में आपको संकेत भाषा में लिखा हुआ एक सवाल हल करना होगा|</string>
</resources>
