<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/rules"
                style="@style/textStyle_instructionForServey"
                android:text="@string/rules"/>
            <TextView
                android:id="@+id/rulesOfGame"
                style="@style/textStyle_instructionForServey"
                android:text="@string/rulesOfGame"/>
            <LinearLayout
                style="@style/textStyle_instructionForServey"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rule1"
                    style="@style/textStyle_instructionForServey"
                    android:text="@string/rule1"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_black_24dp"/>
            </LinearLayout>
            <LinearLayout
                style="@style/textStyle_instructionForServey"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/rule2"
                    style="@style/textStyle_instructionForServey"
                    android:text="@string/rule2"/>
            </LinearLayout>
            <TextView
                android:id="@+id/rule3"
                style="@style/textStyle_instructionForServey"
                android:text="@string/rule3"/>
            <ImageButton
                android:id="@+id/ok"
                style="@style/textStyle_instructionForServey"
                android:layout_gravity="center"
                android:onClick="showDialog"
                android:src="@drawable/ic_assignment_turned_in_black_24dp"
                />
        </LinearLayout>
    </ScrollView>r
</LinearLayout>
