<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayGame">

    <android.support.constraint.ConstraintLayout
        style="@style/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/heading"
            android:text="@string/forServey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <!--  <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:orientation="horizontal">

                  <TextView
                      android:id="@+id/block_name"
                      style="@style/textViewStyle_main_A"
                      android:text="@string/blockName" />

                  <android.support.v7.widget.AppCompatSpinner
                      android:id="@+id/bockSpinner"
                      style="@style/spinnerStyle_main_A" />
              </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/villageName"
                    style="@style/textViewStyle_main_A"
                    android:text="@string/villageName" />

                <game_player.pratham.com.gameplayer.customView.CustomSpinner
                    android:id="@+id/villageSpinner"
                    style="@style/spinnerStyle_main_A" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewStyle_main_A"
                    android:text="@string/groupCount" />

                <game_player.pratham.com.gameplayer.customView.CustomSpinner
                    android:id="@+id/groupSpinner"
                    style="@style/spinnerStyle_main_A" />
            </LinearLayout>

            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">

                 <TextView
                     style="@style/textViewStyle_main_A"
                     android:text="@string/studentName" />

                 <android.support.v7.widget.AppCompatSpinner
                     android:id="@+id/studentSpinner"
                     style="@style/spinnerStyle_main_A" />
             </LinearLayout>-->
        </LinearLayout>

        <!--        <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/round_button_normal"
                    android:enabled="false"
                    android:onClick="nextActivity"
                    android:text="Next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.983"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.807" />-->


    </android.support.constraint.ConstraintLayout>

</ScrollView>